# flatbench

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  LICENSE  Makefile  README.md  __init__.py  build.sh  cli.py  docker-compose.yml  pyproject.toml  report_viewer.html  vercel.json
.github/workflows/: publish.yml  test.yml
benchmarks/: __init__.py
output/: benchmark_20260428_180905.json  benchmark_20260428_180905.md
runners/: __init__.py  elasticsearch.py  flatseek.py  sqlite.py
src/flatbench/: __init__.py  cli.py  test_api.py
src/flatbench/benchmarks/: __init__.py
src/flatbench/generators/: __init__.py
src/flatbench/runners/: __init__.py  duckdb.py  elasticsearch.py  flatseek_api.py  flatseek_cli.py  sqlite.py  tantivy.py  typesense.py  whoosh.py  zincsearch.py
src/flatbench/share/: Dockerfile
